[package]
name = "corpus-extractor"
version = "0.1.0"
authors = ["Vytautas Astrauskas <vastrauskas@gmail.com>"]
edition = "2021"
license = "MIT"

[lib]
test = false

[[bin]]
name = "rustc"
path = "src/main.rs"

[[bin]]
name = "print-stats"
path = "src/statistics.rs"

[dependencies]
corpus-database = { path = "../database" }
log = "0.4"
log-derive = "0.4"
lazy_static = "1.4"
toml = "0.7.1"
itertools = "0.10.5"

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true

[target.'cfg(unix)'.dev-dependencies]
rustc_ast = {path = "/home/nishanth/.rustup/toolchains/nightly-2024-06-09-x86_64-unknown-linux-gnu/lib/rustlib/rustc-src/rust/compiler/rustc_ast"}
rustc_data_structures = {path = "/home/nishanth/.rustup/toolchains/nightly-2024-06-09-x86_64-unknown-linux-gnu/lib/rustlib/rustc-src/rust/compiler/rustc_data_structures"}
rustc_error_codes = {path = "/home/nishanth/.rustup/toolchains/nightly-2024-06-09-x86_64-unknown-linux-gnu/lib/rustlib/rustc-src/rust/compiler/rustc_error_codes"}
rustc_errors = {path = "/home/nishanth/.rustup/toolchains/nightly-2024-06-09-x86_64-unknown-linux-gnu/lib/rustlib/rustc-src/rust/compiler/rustc_errors"}
rustc_hir = {path = "/home/nishanth/.rustup/toolchains/nightly-2024-06-09-x86_64-unknown-linux-gnu/lib/rustlib/rustc-src/rust/compiler/rustc_hir"}
rustc_driver = {path = "/home/nishanth/.rustup/toolchains/nightly-2024-06-09-x86_64-unknown-linux-gnu/lib/rustlib/rustc-src/rust/compiler/rustc_driver"}
rustc_interface = {path = "/home/nishanth/.rustup/toolchains/nightly-2024-06-09-x86_64-unknown-linux-gnu/lib/rustlib/rustc-src/rust/compiler/rustc_interface"}
rustc_metadata = {path = "/home/nishanth/.rustup/toolchains/nightly-2024-06-09-x86_64-unknown-linux-gnu/lib/rustlib/rustc-src/rust/compiler/rustc_metadata"}
rustc_middle = {path = "/home/nishanth/.rustup/toolchains/nightly-2024-06-09-x86_64-unknown-linux-gnu/lib/rustlib/rustc-src/rust/compiler/rustc_middle"}
rustc_mir_transform = {path = "/home/nishanth/.rustup/toolchains/nightly-2024-06-09-x86_64-unknown-linux-gnu/lib/rustlib/rustc-src/rust/compiler/rustc_mir_transform"}
rustc_session = {path = "/home/nishanth/.rustup/toolchains/nightly-2024-06-09-x86_64-unknown-linux-gnu/lib/rustlib/rustc-src/rust/compiler/rustc_session"}
rustc_span = {path = "/home/nishanth/.rustup/toolchains/nightly-2024-06-09-x86_64-unknown-linux-gnu/lib/rustlib/rustc-src/rust/compiler/rustc_span"}
rustc_target = {path = "/home/nishanth/.rustup/toolchains/nightly-2024-06-09-x86_64-unknown-linux-gnu/lib/rustlib/rustc-src/rust/compiler/rustc_target"}
